# cisco-aci-tool

./: .gitignore  LICENSE  README.md
backend/: aci_tool.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/database/: manager.py
backend/app/models/: fabric.py
backend/app/modules/fault_analysis/: analyzer.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FabricComparison.tsx  FabricList.tsx  FabricUploader.tsx  FaultAnalysis.tsx
frontend/src/services/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
